   to registering the window class (which occurs automatically when created 
   by CWnd::Create). This provides a convenient way to set a window's 
   background brush or cursor.
   
* Added an immediate mode to CSplitter. There is now the choice of resizing
   the panes while the splitter bar is being dragged, or defer the resizing
   until the splitter bar drag is complete (as before).
   
* Added project files for Borland's Turbo C++ 2006.

  
Major Changes:
--------------
* Changed CSplitter::CSplitter 	now requires no arguements

* Changed the way windows are created. We no longer use a CBT hook as part of 
   the window creation process. It was this change which allowed Win32++ to
   directly support Windows CE.

Incompatibilities with previous versions:
-----------------------------------------
CSplitter now uses a default constructor. This simplifies the use of CSplitter.
The following functions can be used to set the CSplitter paramerters:
* SetBarPos	sets the initial splitter bar position (default is 10)
* SetBarColor   sets the color of the splitter bar (default is rebar color)
* SetImmediate  sets immediate mode true or false (default is false)
* SetVertical   sets vertical bar mode true or false (default is true)
* SetWidth      sets the width of the splitter bar (default is 5)


Version 5.6
===========
* Added InitInstance to CWinApp. Code to create windows should now be
   placed in InitInstance instead of the constructor of the CWinApp
   derived class. Doing this allows the CWinApp derrived class to be
   fully constructed before attempting to create windows. 
* Property Sheets are now supported. The files PropertySheet.cpp and 
   PropertySheet.h have been added to Win32++. These files define
   the CPropertySheet and CPropertyPage classes. The Property sheet generic 
   demonstrates the following:
  - Modal property sheets.
  - Modeless property sheets.
  - Wizards.
* The owner drawing of menus has been moved from CMenubar to CFrame. This